--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,35 @@
- version: '3'
- services:
-   bot-validation-assistant:
-     restart: always
-     build: .
-     command: python manage.py runserver 0.0.0.0:8000
-     volumes:
-       - .:/code
-     ports:
-       - "8000:8000"
-     depends_on:
-      - db
-   db:
+version: '3.3'
+services:
+  bot:
     restart: always
-    image: postgres:9.6
+    build: .
+    command: python manage.py runserver 0.0.0.0:8000
+    volumes:
+      - .:/code
     ports:
-      - "5432:5432"
+      - "8000:8000"
+    depends_on:
+      - db
+  db:
+    image: mysql:5.7
+    restart: always
+    environment:
+      MYSQL_DATABASE: 'db'
+     # So you don't have to use root, but you can if you like
+      MYSQL_USER: 'user'
+     # You can use whatever password you like
+      MYSQL_PASSWORD: 'password'
+     # Password for root access
+      MYSQL_ROOT_PASSWORD: 'password'
+    ports:
+    # <Port exposed> : < MySQL Port running inside container>
+      - '3306:3306'
+    expose:
+   # Opens port 3306 on the container
+      - '3306'
+   # Where our data will be persisted
+    volumes:
+      - bot-db:/var/lib/mysql
+   # Names our volume
+volumes:
+  bot-db:
